[package]
name = "ethash"
description = "An Apache-licensed Ethash implementation."
version = "0.4.1"
authors = ["Wei Tang <hi@that.world>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
byteorder = { version = "1", default-features = false }
ethereum-types = { version = "0.12", default-features = false, features = ["rlp"] }
lazy_static = { version = "1.4", default-features = false, optional = true, features = ["spin_no_std"] }
log = "0.4"
memmap = { version = "0.7.0" }
num_cpus = { version = "1", optional = true }
once_cell = "1.12.0"
parking_lot = { version = "0.11", optional = true }
primitive-types = { version = "0.10", default-features = false, features = [
  "rlp",
] }
rayon = { version = "1.5", optional = true }
rlp = { version = "0.5", default-features = false }
sha2 = { version = "0.8", default-features = false, optional = true }
sha3 = { version = "0.10", default-features = false }

tiny-keccak = { version = "2.0.1", features = ["keccak"], optional = true }
walkdir = "2.3"

[dev-dependencies]
hex = { version = "0.4", default-features = false }
hex-literal = "0.3"
humantime = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[features]
default = ["std"]
proof = [
  "tiny-keccak",
  "sha2",
  "lazy_static",
]
std = [
  "ethereum-types/std",
  "rlp/std",
  "byteorder/std",
  "sha3/std",
  "num_cpus",
  "rayon",
  "parking_lot",
]

[[example]]
name = "epoch"
required-features = ["proof"]
